fix: Resolve spacing issue with align-super class

--- a/client/assets/_main.scss
+++ b/client/assets/_main.scss
@@ -97,7 +97,7 @@ a:before {
 }
 
 .align-super {
-  vertical-align: super;
+  vertical-align: super !important;
 }
 
 label input,
